--- a/.eslintrc
+++ b/.eslintrc
@@ -39,7 +39,7 @@
   },
 
   "extends": "plugin:react/all",
-  
+
 
   "rules": {
     "block-scoped-var": 2,
@@ -177,7 +177,7 @@
     "sort-vars": 0,
     "keyword-spacing": [2, { "before": true }],
     "space-before-blocks": [2, "always"],
-    "space-before-function-paren": [2, {"anonymous": "always", "named": "never"}],
+    "space-before-function-paren": [2, {"anonymous": "never", "named": "never"}],
     "space-in-brackets": 0,
     "space-in-parens": [2, "never"],
     "space-infix-ops": 2,
@@ -190,6 +190,10 @@
     "vars-on-top": 2,
     "wrap-iife": [2, "any"],
     "wrap-regex": 0,
-    "yoda": [2, "never"]
+    "yoda": [2, "never"],
+
+    //react/jsx rules
+    "react/prefer-stateless-function": "off",
+    "react/jsx-indent": "off"
   }
 }
