--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "dev": "webpack -d && NODE_ENV=development webpack-dev-server --inline --hot --content-base /dist",
+    "server": "webpack-dev-server --inline --hot --content-base /dist",
+    "dev": "webpack -d",
     "prod": "NODE_ENV=production webpack -p"
   },
   "author": "",
@@ -18,16 +19,19 @@
     "babel-preset-es2015": "^6.13.2",
     "babel-preset-react": "^6.11.1",
     "css-loader": "^0.23.1",
+    "es6-promise": "^3.2.1",
     "eslint": "^3.2.2",
     "eslint-loader": "^1.5.0",
     "eslint-plugin-react": "^6.0.0",
     "extract-text-webpack-plugin": "^1.0.1",
+    "file-loader": "^0.9.0",
     "html-webpack-plugin": "^2.22.0",
     "jasmine": "^2.4.1",
     "node-sass": "^3.8.0",
     "postcss-loader": "^0.9.1",
     "sass-loader": "^4.0.0",
     "style-loader": "^0.13.1",
+    "url-loader": "^0.5.7",
     "webpack": "^1.13.1",
     "webpack-dev-server": "^1.14.1"
   },
