Add exception to linter config file. Add 2 locally hosted google fonts, along with typeography scss file.

--- a/.eslintrc
+++ b/.eslintrc
@@ -194,6 +194,7 @@
 
     //react/jsx rules
     "react/prefer-stateless-function": "off",
-    "react/jsx-indent": "off"
+    "react/jsx-indent": "off",
+    "react/require-optimization": "off"
   }
 }
