--- a/package.json
+++ b/package.json
@@ -4,9 +4,9 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "./node_modules/.bin/webpack-dev-server --inline --hot --content-base /dist",
-    "dev": "webpack -d",
-    "prod": "NODE_ENV=production webpack -p"
+    "dev": "./node_modules/.bin/webpack-dev-server --inline --hot --content-base /dist",
+    "build": "NODE_ENV=production webpack -p",
+    "prod": "NODE_ENV=production node server.js"
   },
   "author": "",
   "license": "ISC",
@@ -37,6 +37,7 @@
   },
   "dependencies": {
     "classnames": "^2.2.5",
+    "express": "^4.14.0",
     "flux": "^2.1.1",
     "react": "^15.3.0",
     "react-dom": "^15.3.0",
