--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "index.js",
   "scripts": {
     "dev": "./node_modules/.bin/webpack-dev-server --inline --hot --content-base /dist",
+    "build-dev": "webpack",
     "build": "NODE_ENV=production webpack -p",
     "prod": "NODE_ENV=production node server.js"
   },
