--- a/package.json
+++ b/package.json
@@ -6,8 +6,8 @@
   "scripts": {
     "start": "./node_modules/.bin/webpack-dev-server --inline --hot --content-base /dist",
     "build-dev": "webpack",
-    "build": "NODE_ENV=production webpack -p",
-    "prod": "NODE_ENV=production node server.js"
+    "build-prod": "NODE_ENV=production webpack -p",
+    "express": "node server.js"
   },
   "author": "",
   "license": "ISC",
